--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0031)http://personal.psu.edu/dul262/ -->
 <html class="gr__personal_psu_edu"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Dongsheng Luo</title>
+<title>Yawen Zhang</title>
 <meta name="keywords" content="Dongsheng Luo">
 <meta name="description" content="Dongsheng Luo@ Penn State">
 
@@ -11,23 +11,23 @@
 <table width="100%">
   <tbody><tr>
     <td width="85%" align="top">
-			<h1>Dongsheng Luo (骆东升)</h1>
+			<h1>Yawen Zhang</h1>
 			<p>
-			Ph.D. Candidate<br>
-			<a href="https://ist.psu.edu/">College of Information Science and Technology</a><br>
-			<a href="http://www.psu.edu/">The Pennsylvania State University</a><br> 
-			Email: x@ist.psu.edu where x = dul262<br>
-      Office: E338 Westgate Building, State College, PA, 16802.
+			<a href="https://www.etown.edu/depts/math/actuarial-science-major.aspx">Mathematical Sciences</a><br>
+			<a href="https://www.etown.edu/">Elizabethtown College</a><br> 
+			Email:  zhangy@etown.edu<br>
+      223-666-1994<br>
+      1668 Baugher Ave, Elizabethtown, PA 17022.
       </p>
-      <!-- <p><a href="http://www.luods.org/CV.pdf">CV</a>, -->
-      <a href="http://www.linkedin.com/in/dongsheng-luo-73973714b">Linkedin</a>,
-      <a href="https://github.com/flyingdoog">Github</a>,
-      <a href="https://scholar.google.com/citations?user=6Ih5XVkAAAAJ&hl=en">Google Scholar</a>
+      <p><a href="./CV.pdf">CV</a>,
+      <a href="https://www.linkedin.com/in/yawen-zhang-42693115a/">Linkedin</a>
+      <!-- <a href="https://github.com/flyingdoog">Github</a> -->
+      <!-- <a href="./aboutme.pdf">About Me</a> -->
       <p></p>
 			<p></p>
     </td>
     <td width="15%" valign="middle">
-      <img width="200" height="200" src="./pictures/portraits.jpg">
+      <img width="200" height="200" src="https://media-exp1.licdn.com/dms/image/C4D03AQGKEqbWgXfcmg/profile-displayphoto-shrink_200_200/0?e=1606953600&v=beta&t=HbREUbD1Ii9S-w5ttYfKu0pwyX-lHX8NEL7WH7bLJzc">
     </td>
   </tr>
 </tbody></table>
@@ -37,223 +37,175 @@
 
 <h2>Short bio</h2>
 <p>
-I am currently a <del>first</del> <del>second</del> <del>third</del> fourth year Ph.D. student at the College of Information Science and Technology, Pennsylvania State University, supervised by Prof. <a href="https://faculty.ist.psu.edu/xzz89/">Xiang Zhang</a>. I obtained my B.Eng degree in computer science and technology from Beihang University in 2017, supervised by Prof. <a href="http://mashuai.buaa.edu.cn/">Shuai Ma</a>. I was an exchange student at Technical University of Munich, Munich, Germany. My research focuses on graph mining and graph related deep learning.</p>
+I am currently a senior student in .... </p>
 
 
-<h2>Research Interests</h2>
-<p>Graph Mining, Multi-network Analysis, Deep Learning, Big Data Analysis
+<h2>EDUCATION</h2>
+<p><b> Elizabethtown College</b>, Elizabethtown, PA.       Jan.2017 - Anticipated Dec 2020<br>
+<i>Mathematical Sciences</i> 
+<li>
+  B.S. in Actuarial Science
+</li>
+<li>
+  GPA: 3.62/4.0 （grade ranking #2）<br>
+</li>
+Minor: Data Analytics
 </p>
 
-<h2>Publications</h2>
+<p><b> University of Granada</b>,  Spain. Sep.2019 - Dec.2019 <br>
+<i>Modern Language </i> <br>
+Exchange student
+</p>
 
 
-<div>
-<p>Parameterized Explainer for Graph Neural Network
-<br>
-<b> Dongsheng Luo</b>, Wei Cheng, Dongkuan Xu, Wenchao Yu, Bo Zong, Haifeng Chen, Xiang Zhang
-<br>
-<i>to appear in Proceedings of 34th Conference on Neural Information Processing Systems (NeurIPS), 2020</i>
-</p> 
+<p> <b> Related Courses</b> Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research, Mathematical Proofs, Problem  Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus,  Linear Algebra, Principles of Macroeconomics, Accounting, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance</p>
+
+
+
+
+<h2> PAPER</h2>
 
 <div>
  <p>
-  Local Community Detection in Multiple Networks.  <a href="./RWM/RWM.pdf">[pdf]</a><a href="https://github.com/flyingdoog/RWM">[code&data]</a><a href="./RWM/dblp.zip">[data(DBLP)]</a><a href="./RWM/slides.pdf">[slides]</a><a href="https://youtu.be/bCYu6VBmlbY">[video]</a>
-<br>
-<b>Dongsheng Luo</b>, Yuchen Bian, Yaowei Yan, Xiao Liu, Jun Huan, Xiang Zhang
-<br>
-<i>in Proceedings of 26th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (SIGKDD),2020</i>
+  <b>Yawen Zhang</b>, A purely 3-D geometrical solution to a complicated probability problem (Submitted to Solution to  Problem 2065, Mathematics Magazine, Under Review)
 </p>
 
 
-<div>
-<p>
-Deep Multi-Graph Clustering via Attentive Cross-Graph Association <a href="./DMGC/dmgc.pdf">[pdf]</a><a href="./DMGC/dmgc_poster.pdf">[poster]</a>
-<a href="./DMGC/Spotlight.pdf">[spotlight]</a><a href="https://github.com/flyingdoog/DMGC">[code&data]</a>
-<br>
-<b>Dongsheng Luo</b>, Jingchao Ni, Suhang Wang, Yuchen Bian, Xiong Yu and Xiang Zhang
-<br>
-<i>Proceedings of the ACM International Conference on Web Search and Data Mining (WSDM), 2020</i>
-</p> 
 
-
-<div>
-<p>
-  A Collective Approach to Scholar Name Disambiguation. <a href="./NDCC/tkde2020.pdf">[pdf]</a>  <a href="./NDCC/NDCC.zip">[code]</a><a href="./NDCC/ndcc_demo.html">[demo]</a>
-<br>
-<b>Dongsheng Luo</b>, Shuai Ma, Yaowei Yan, Chunming Hu, Xiang Zhang, and Jinpeng Huai
-<br>
-<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2020.</i>
-<!-- 
-<br>
-(Released version of the code is still preparing. I have disambiguated all names in AMiner dataset for comparison. Please use the Demo link above.) -->
-</p>
-
-
-<p> Memory-Based Random Walk for Multi-Query Local Community Detection. <a href="https://github.com/flyingdoog/MQLC">[repo]</a> <a href="https://sites.psu.edu/yuchenbian/mrw/">[code&data]</a>
-<br>
-Yuchen Bian, <b>Dongsheng Luo</b>, Yaowei Yan, Wei Cheng, Wei Wang, and Xiang Zhang
-<br>
-<i>Knowledge and Information Systems (KAIS), 2019 (Extended version of the ICDM'2018 paper)</i>
-</p>
+<h2>EXAMS</h2>
 
 
 <p>
-  Constrained Local Graph Clustering by Colored Random Walk
-<br>
-Yaowei Yan, Yuchen Bian, <b>Dongsheng Luo</b>, Dongwon Lee, and Xiang Zhang
-<br>
-<i>Proceedings of the International Conference on World Wide Web (WWW), 2019</i>
+Actuarial Exams: Exam Probability, Exam Financial Mathemati
 </p>
 
-<p>Spatio-Temporal Attentive RNN for Node Classification in Temporal Attributed Graphs
-<br>
-Dongkuan Xu, Wei Cheng, <b>Dongsheng Luo</b>, Xiao Liu, Xiang Zhang
-<br>
-<i>Proceedings of the International Joint Conference on Artificial Intelligence (IJCAI), 2019</i>
-</p> 
+
+<h2>RESEARCH</h2>
 
 <p>
-Adaptive Neural Network for Node Classification in Dynamic Networks 
-<br>
-Dongkuan Xu, Wei Cheng, <b>Dongsheng Luo</b>, Yameng Gu, Xiao Liu, Jingchao Ni, Bo Zong, Haifeng Chen, Xiang Zhang.
-<br>
-<i>Proceedings of the IEEE International Conference on Data Mining (ICDM), 2019</i>
+  <b>Research Assistant</b> | Elizabethtown College | Elizabethtown, PA 08/2020 – present<br>
+  Project: <b>Game Theory - Equilibrium Problem in Multiple-Strategy Game</b><br>
+  <i>Supervisor: Dr. Timothy McDevitt, Professor of Mathematical and Computer Sciences at Elizabethtown College</i>
+  <li>
+    Proved that Nash equilibrium makes the conservative players, who accept ties, in two strategies games more likely to win, compare to the aggressive plays who think winning is everything
+  </li>
+  <li>
+    Illustrated that the phenomenon is transferable and robust in three strategies non-zero-sum games
+  </li>
+  <li>
+    Used Karush–Kuhn–Tucker (KKT), matrix derivatives and linear programming to calculate the mixed  strategies in multiple-strategy games 
+  </li>
+  <li>
+    Numerically demonstrated that the probability for conservative plays to win goes down and converge to ½ while n gets bigger
+  </li>
 </p>
 
-<p>On Multi-Query Local Community Detection. <a href="https://github.com/flyingdoog/MQLC">[repo]</a> <a href="https://sites.psu.edu/yuchenbian/mrw/">[code&data]</a>
-<br>
-Yuchen Bian, Yaowei Yan, Wei Cheng, Wei Wang, <b>Dongsheng Luo</b>, and Xiang Zhang 
-<br>
-<i>Proceedings of the IEEE International Conference on Data Mining (ICDM), 2018</i> <font color="red">(Best Paper Candidate)</font>
-</p>
-
-<p>Query Independent Scholarly Article Ranking
-<br>
-Shuai Ma, Chen Gong, Renjun Hu, <b>Dongsheng Luo</b>, Chunming Hu, and Jinpeng Huai
-<br>
-<i>Proceedings of the IEEE International Conference on Data Engineering (ICDE), 2018</i>
-</p>
-
-<p>Local Graph Clustering by Multi-Network Random Walk with Restart</a> <a href="https://github.com/flyingdoog/MRWR">[code]</a>
-<br>
- Yaowei Yan, <b>Dongsheng Luo</b>, Jingchao Ni, Hongliang Fei, Wei Fan, Xiong Yu, John Yen, and Xiang Zhang 
-<br>
-<i> Proceedings of the Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2018</i>
-</p>
-
-<p>Ensemble Enabled Weighted PageRank<a href="http://mashuai.buaa.edu.cn/pubs/wsdmCUP2016.pdf">[pdf]</a>
-<br>
-<b>Dongsheng Luo</b>, Chen Gong, Renjun Hu, Liang Duan, and Shuai Ma
-<br>
-<i>The WSDM Cup 2016 - Entity Ranking Challenge, San Francisco, CA, USA, 2016.  </i><font color="red">(The 2nd place in the final ranking)</font>
-</p>
-
-
-<h2>Research Experiences</h2>
 
 
 <p>
-College of Information Sciences and Technology, The Pennsylvania State University, PA, U.S.
-<br>
-Graduate Research Assistant, Aug. 2017 - Present
-<br>
-Supervisor: <a href="https://faculty.ist.psu.edu/xzz89/">Prof. Xiang Zhang</a>
-<br>
+  <b>Data Analysis Research Assistant</b> | Elizabethtown College | Elizabethtown, PA 10/2017 – 04/2018<br>
+  Project: <b>Game Theory - Equilibrium Problem in Multiple-Strategy Game</b><br>
+  <i>Supervisor: Dr. Dan Chen, Assistant Professor of Political Science at the University of Richmond</i>
+  <li>
+    Assisted in a research that published in the <i>Journal of Experimental Political Science</i>
+  </li>
+  <li>
+    Cataloged hundreds of news pieces in Chinese and English
+  </li>
+  <li>
+    Analyzed the research data in excel format for further analysis
+  </li>
 </p>
 
-<p>
-NEC Laboratories America, NJ, U.S.
-<br>
-Intern, May. 2020 - Aug. 2020
-<br>
-Supervisor: <a href="https://chengw07.github.io/">Dr. Wei Cheng</a>
-<br>
-Topic: NLP
-</p>
 
+
+
+<h2>TEACHING</h2>
+<p> Teaching Assistant | Elizabethtown College | Elizabethtown, PA 04/2018 – 05/2019 </p>
+<li>
+  Tutored students in Financial Mathematics and Introduction to Mathematical Proofs, as chosen by the 
+faculty
+</li>
+<li>
+  Provided individual mentorship to students with various academic backgrounds
+</li>
+
+
+
+
+<h2>EMPLOYMENT</h2>
 <p>
-Big Data Lab, Baidu Research, Beijing, China
-<br>
-Intern, Jun. 2019 - Sep. 2019
-<br>
-Supervisor: <a href="https://www.linkedin.com/in/jun-luke-huan-58963121/"> Prof. Jun (Luke) Huan</a>
-<br>
-Topic: Recommendation System
+  <b>Actuarial Pricing intern |AXA</b>, P&C and specialty risk division | New York City, NY 06/2020 – 08/2020<br>
+  <li>
+    Researched the Predictive Analytics Models and Algorithms in insurance using R markdown
+  </li>
+  <li>
+   Developed machine learning models (XGBoost, Random Forest) to predict the loss ratio for Property and Marine insurance, and improved the accuracy by 5%, compared with the previously used model (GLM) 
+  </li>
+  <li>
+    Extracted from internal database using SQL, and built a data visualization dashboard that offers data insights using R Shiny
+  </li>
+  <li>
+    Guided the NA Property actuarial team to visualize the data using R shiny 
+  </li>
+  <li>
+    Prepared consolidation reports using R and provided the metrics for leadership team to review
+  </li>
+  <li>
+    Created an excel template for premium allocation and surcharge calculations to support the underwriting team
+  </li>
+  <li>Interviewed 20+ colleagues across business functions to gain a comprehensive understanding of how 
+the company works </li> 
 </p>
 
 
 <p>
-Institute of Advanced Computing Technology, Beihang University, Beijing, China
-<br>
-Undergraduate Research Assistant, Jul. 2015 - Jun. 2017
-<br>
-Supervisor: <a href="http://mashuai.buaa.edu.cn/">Prof. Shuai Ma</a>
-<br>
-Topic: Scholarly article ranking &amp; scholarly name disambiguation.
-</p>
+  <b>Wealth Actuarial Intern | Mercer</b>, Philadelphia, PA.  06/2019 – 08/2019<br>
+  <li>
+    Completed a mock valuation using a highly integrated software <i>Retirement Studio</i>
+  </li>
+  <li>
+   Designed Retirement Plan Changes from pension to defined benefits plan for multiple big companies
+  </li>
+  <li>
+   Numerically analyzed and manage the investment portfolio for client trust accounts
+  </li>
+  <li>
+    Reviewed and completed benefit calculations and valuation reports in excel forma
+  </li>
 
-<h2>Teaching Experiences</h2>
-<p> Teaching Assistant
-<br>IST 210: Organization of Data (Fall 2020, Fall 2019)
-<br>IST 558: Data Mining II (Spring 2020)
-<br>IST 242: Intermediate & Object-Oriented Application Development (Spring 2019)
-</p>
-
-
-<h2>Mentoring</h2>
-<a href="https://isjakewong.github.io/"> Yingheng Wang</a> (Jan.-Feb. 2019), Undergraduate student at Tongji University, will be a Master student at Tsinghua University.
-<br> <a href="https://www.linkedin.com/in/%E6%96%87%E7%80%9A-%E9%82%93-252404173/?locale=en_US"> Wenhan Deng</a> (May 2020-), Undergraduate student at University of Michigan, Ann Arbor
-
-
-
-<h2>Professional Services</h2>
-<p>
-PC Members:
-<br>
-KDD'20
-<br>
-AAAI'21
-</p>
-
-<p>
-Journal Reviewer:
-<br>
-Data Mining and Knowledge Discovery (DMKD)
 </p>
 
 
-<p>
-External Conference reviewer:
-<br>
-ICDM'18, KDD'18, SDM'18, WSDM'19, AAAI'19, SDM'19, KDD'19, CIKM'19, ICDM'19, WSDM'20, AAAI'20, WWW'20, SDM'20, WSDM'21
-</p>
-
-<h2>Honors and Awards</h2>
-KDD Registration Award, 2020
-<br>
-IST Travel Award, 2020
-<br>
-Best Paper Award Candidate, ICDM, 2018
-<br>
-Outstanding Undergraduate Student Award of Beijing City, 2017
-<br>
-CSC Outstanding Undergraduate Exchange Program Award, 2016
-<br>
-WSDM Cup 2016 – Entity Ranking Challenge the 2nd place in the final ranking, 2016
-<br>
-China National Undergraduate Scholarship: 2014, 2015
-<br>
 
 
-<!-- <h2>Some links</h2>
-<br>
-<a target="_blank" href="http://www.luods.org/sunzq/ypml.xlsx">Are you looking for the medicine data(药品名录)? Here it is!</a> -->
+<h2>HONORS & AWARDS</h2>
+<li> Outstanding Senior Student in Math Department (one student per year), 2020 </li>
+<li> Interviewed by AdvisorSmith as the leader student in Insurance, 2020 </li>
+<li> Honors-in-the-Discipline in Mathematics, 2020  </li>
+<li> Elizabethtown College Math Department Excellent Tutor, 2019  </li>
+<li> Pi Mu Epsilon, Pennsylvania Pi Chapter Award, 2019</li>
+
+
+
+<h2>ACTIVITIES & LEADERSHIP</h2>
+<li> President, Campus Asian Culture & Food Club, 9/2017 – 10/2018 </li>
+<li> SOA Candidate Conference Spring, 2019 </li>
+<li> Diversity Team Ambassador, Office of Admissions Elizabethtown College, 04/2017-2/2019 </li>
+<li> Inclusive Leadership Conference Spring, 2018</li>
+
+
+<h2>SKILLS</h2>
+<p> Computer Skills: Microsoft Office Suite, R, Python, SQL, VBA, SAS, Mathematica, Java, Markdown and Lat </p>
+
+
+
 
 <br>
 <br>
 <footer>
       <p>
-        *Last updated on 09/26/2020*
+        *Last updated on 09/27/2020*
       </p>
 </footer>
 
