--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
 
 <hr>
 
+<h2><font size="5" color="red">[News]</font></h2>
+<li> Interviewed by AdvisorSmith as the future leader in insurance
+<a href=https://advisorsmith.com/education/elizabethtown-college-actuarial-science-student-qa-yawen-zhang/>[link]</a>  
+</li>
+
 
 <h2>Short bio</h2>
 <p>
 I am currently a senior student in .... </p>
-
 
 <h2>EDUCATION</h2>
 <p><b> Elizabethtown College</b>, Elizabethtown, PA.       Jan.2017 - Anticipated Dec 2020<br>
