--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       223-666-1994<br>
       1668 Baugher Ave, Elizabethtown, PA 17022.
       </p>
-      <p><a href="./CV.pdf">CV</a>,
+      <p><a href="./Yawen Zhang_CV_PhD.pdf">CV</a>,
       <a href="https://www.linkedin.com/in/yawen-zhang-42693115a/">Linkedin</a>
       <!-- <a href="https://github.com/flyingdoog">Github</a> -->
       <!-- <a href="./aboutme.pdf">About Me</a> -->
@@ -27,7 +27,7 @@
 			<p></p>
     </td>
     <td width="15%" valign="middle">
-      <img width="200" height="200" src="https://media-exp1.licdn.com/dms/image/C4D03AQGKEqbWgXfcmg/profile-displayphoto-shrink_200_200/0?e=1606953600&v=beta&t=HbREUbD1Ii9S-w5ttYfKu0pwyX-lHX8NEL7WH7bLJzc">
+      <img width="250" height="250" src="./Picture.jpg">
     </td>
   </tr>
 </tbody></table>
