--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
       223-666-1994<br>
       1668 Baugher Ave, Elizabethtown, PA 17022.
       </p>
-      <p><a href="./Yawen Zhang_CV_PhD.pdf">CV</a>,
-      <a href="https://www.linkedin.com/in/yawen-zhang-42693115a/">Linkedin</a>
-      <!-- <a href="https://github.com/flyingdoog">Github</a> -->
-      <!-- <a href="./aboutme.pdf">About Me</a> -->
+      <p><a href="./Yawen Zhang_CV_Git.pdf">CV</a>,
+      <a href="./personal.html">Personal</a>
       <p></p>
 			<p></p>
     </td>
@@ -34,15 +32,12 @@
 
 <hr>
 
-<h2><font size="5" color="red">[News]</font></h2>
+<h2><font size="4" color="blue">[News]</font></h2>
 <li> Interviewed by AdvisorSmith as the future leader in insurance
 <a href=https://advisorsmith.com/education/elizabethtown-college-actuarial-science-student-qa-yawen-zhang/>[link]</a>  
 </li>
 
 
-<h2>Short bio</h2>
-<p>
-I am currently a senior student in .... </p>
 
 <h2>EDUCATION</h2>
 <p><b> Elizabethtown College</b>, Elizabethtown, PA.       Jan.2017 - Anticipated Dec 2020<br>
@@ -53,18 +48,13 @@ I am currently a senior student in .... </p>
 <li>
   GPA: 3.62/4.0 （grade ranking #2）<br>
 </li>
-Minor: Data Analytics
+<li>
+  Minor: Data Analytics<br>
+</li>
+<li>
+  Related Courses: Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research, Mathematical Proofs, Problem Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance <br>
+</li>
 </p>
-
-<p><b> University of Granada</b>,  Spain. Sep.2019 - Dec.2019 <br>
-<i>Modern Language </i> <br>
-Exchange student
-</p>
-
-
-<p> <b> Related Courses</b> Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research, Mathematical Proofs, Problem  Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus,  Linear Algebra, Principles of Macroeconomics, Accounting, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance</p>
-
-
 
 
 <h2> PAPER</h2>
@@ -87,28 +77,30 @@ Actuarial Exams: Exam Probability, Exam Financial Mathemati
 <h2>RESEARCH</h2>
 
 <p>
-  <b>Research Assistant</b> | Elizabethtown College | Elizabethtown, PA 08/2020 – present<br>
+  <b>Research Assistant</b> | Elizabethtown College | Elizabethtown, PA    08/2020 – present<br>
   Project: <b>Game Theory - Equilibrium Problem in Multiple-Strategy Game</b><br>
   <i>Supervisor: Dr. Timothy McDevitt, Professor of Mathematical and Computer Sciences at Elizabethtown College</i>
   <li>
     Proved that Nash equilibrium makes the conservative players, who accept ties, in two strategies games more likely to win, compare to the aggressive plays who think winning is everything
   </li>
   <li>
-    Illustrated that the phenomenon is transferable and robust in three strategies non-zero-sum games
+    Calculated the probability that conservative players winning over aggressive players in two strategies games
   </li>
   <li>
-    Used Karush–Kuhn–Tucker (KKT), matrix derivatives and linear programming to calculate the mixed  strategies in multiple-strategy games 
+    Empirically demonstrated that the probability for conservative plays to win goes down while the number of strategies gets bigger
   </li>
   <li>
-    Numerically demonstrated that the probability for conservative plays to win goes down and converge to ½ while n gets bigger
+    Used Karush–Kuhn–Tucker (KKT), matrix derivatives and linear programming to analyze the mixed strategies in multiple-strategy games, and prove the probability converges to 1/2 (ongoing) 
+  </li>
+  <li>
+    Read economic literatures to find a practical application that works with the phenomenon
   </li>
 </p>
 
 
 
 <p>
-  <b>Data Analysis Research Assistant</b> | Elizabethtown College | Elizabethtown, PA 10/2017 – 04/2018<br>
-  Project: <b>Game Theory - Equilibrium Problem in Multiple-Strategy Game</b><br>
+  <b>Data Analysis Research Assistant</b> | Elizabethtown College | Elizabethtown, PA    10/2017 – 04/2018<br>
   <i>Supervisor: Dr. Dan Chen, Assistant Professor of Political Science at the University of Richmond</i>
   <li>
     Assisted in a research that published in the <i>Journal of Experimental Political Science</i>
@@ -125,7 +117,7 @@ Actuarial Exams: Exam Probability, Exam Financial Mathemati
 
 
 <h2>TEACHING</h2>
-<p> Teaching Assistant | Elizabethtown College | Elizabethtown, PA 04/2018 – 05/2019 </p>
+<p> Teaching Assistant | Elizabethtown College | Elizabethtown, PA    04/2018 – 05/2019 </p>
 <li>
   Tutored students in Financial Mathematics and Introduction to Mathematical Proofs, as chosen by the 
 faculty
@@ -139,7 +131,7 @@ faculty
 
 <h2>EMPLOYMENT</h2>
 <p>
-  <b>Actuarial Pricing intern |AXA</b>, P&C and specialty risk division | New York City, NY 06/2020 – 08/2020<br>
+  <b>Actuarial Pricing intern |AXA</b>, P&C and specialty risk division | New York City, NY    06/2020 – 08/2020<br>
   <li>
     Researched the Predictive Analytics Models and Algorithms in insurance using R markdown
   </li>
@@ -164,15 +156,15 @@ the company works </li>
 
 
 <p>
-  <b>Wealth Actuarial Intern | Mercer</b>, Philadelphia, PA.  06/2019 – 08/2019<br>
+  <b>Wealth Actuarial Intern | Mercer</b>, Philadelphia, PA.     06/2019 – 08/2019<br>
   <li>
-    Completed a mock valuation using a highly integrated software <i>Retirement Studio</i>
+    Implemented data gathering, data cleaning, and exploratory data to complete a mock valuation using a highly integrated software Retirement Studio, and made a 20-page valuation report for the client to review </i>
   </li>
   <li>
-   Designed Retirement Plan Changes from pension to defined benefits plan for multiple big companies
+    Used longevity models and mortality probabilities to design Retirement Plan Changes and made graphs to visualize how the changes (from pension to 401K) benefited the clients
   </li>
   <li>
-   Numerically analyzed and manage the investment portfolio for client trust accounts
+    Numerically analyzed and manage the investment portfolio for client trust accounts
   </li>
   <li>
     Reviewed and completed benefit calculations and valuation reports in excel forma
@@ -185,6 +177,7 @@ the company works </li>
 
 <h2>HONORS & AWARDS</h2>
 <li> Outstanding Senior Student in Math Department (one student per year), 2020 </li>
+<li> Dean’s List 2020 & 2019</li>
 <li> Interviewed by AdvisorSmith as the leader student in Insurance, 2020 </li>
 <li> Honors-in-the-Discipline in Mathematics, 2020  </li>
 <li> Elizabethtown College Math Department Excellent Tutor, 2019  </li>
