--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ the company works </li>
 
 
 <h2>SKILLS</h2>
-<p> Computer Skills: Microsoft Office Suite, R, Python, SQL, VBA, SAS, Mathematica, Java, Markdown and Lat </p>
+<p> Computer Skills:R, Python, SQL, VBA, SAS, Mathematica, Java, Markdown and Latex </p>
 
 
 
