--- a/ipad.html
+++ b/ipad.html
@@ -245,7 +245,7 @@ $('a[href*="#"]')
 				</div>
 			
 				<div id="content_fm88tq5ue" class="column-content" data-module="paragraph">
-					<div class="is-content"><div data-content-for="xl"><p style="font-size: 0.888889rem;" data-mce-style="font-size: 0.888889rem;"><span class="font_sl22ea0k5">Besides math, I also love painting</span></p></div></div>
+					<div class="is-content"><div data-content-for="xl"><p style="font-size: 0.888889rem;" data-mce-style="font-size: 0.888889rem;"><span class="font_sl22ea0k5">Besides mathematics, I also love painting</span></p></div></div>
 				</div>
 			
 					</div>
