--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 <p>
-Actuarial Exams: Exam Probability, Exam Financial Mathemati
+Actuarial Exams: Exam Probability, Exam Financial Mathematics
 </p>
 
 
@@ -106,26 +106,9 @@ Actuarial Exams: Exam Probability, Exam Financial Mathemati
     Assisted in a research that published in the <i>Journal of Experimental Political Science</i>
   </li>
   <li>
-    Cataloged hundreds of news pieces in Chinese and English
-  </li>
-  <li>
-    Analyzed the research data in excel format for further analysis
+    Cataloged hundreds of news pieces in Chinese and English, and analyzed the research data in excel format for further analysis
   </li>
 </p>
-
-
-
-
-<h2>TEACHING</h2>
-<p> Teaching Assistant | Elizabethtown College | Elizabethtown, PA    04/2018 – 05/2019 </p>
-<li>
-  Tutored students in Financial Mathematics and Introduction to Mathematical Proofs, as chosen by the 
-faculty
-</li>
-<li>
-  Provided individual mentorship to students with various academic backgrounds
-</li>
-
 
 
 
@@ -136,7 +119,7 @@ faculty
     Researched the Predictive Analytics Models and Algorithms in insurance using R markdown
   </li>
   <li>
-   Developed machine learning models (XGBoost, Random Forest) to predict the loss ratio for Property and Marine insurance, and improved the accuracy by 5%, compared with the previously used model (GLM) 
+    Deployed machine learning models (XGBoost, Random Forest) to predict the loss ratio for Property and Marine insurance, and improved the accuracy by 5%, compared with the previously used model (GLM) 
   </li>
   <li>
     Extracted from internal database using SQL, and built a data visualization dashboard that offers data insights using R Shiny
@@ -172,7 +155,15 @@ the company works </li>
 
 </p>
 
-
+<h2>TEACHING</h2>
+<p> Teaching Assistant | Elizabethtown College | Elizabethtown, PA    04/2018 – 05/2019 </p>
+<li>
+  Tutored students in Financial Mathematics and Introduction to Mathematical Proofs, as chosen by the 
+faculty
+</li>
+<li>
+  Provided individual mentorship to students with various academic backgrounds
+</li>
 
 
 <h2>HONORS & AWARDS</h2>
