--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <h2>EDUCATION</h2>
-<p><b> Elizabethtown College</b>, Elizabethtown, PA.       Jan.2017 - Anticipated Dec 2020<br>
+<p><b> Elizabethtown College</b>, Elizabethtown, PA.       (Jan.2017 - Anticipated Dec 2020)<br>
 <i>Mathematical Sciences</i> 
 <li>
   B.S. in Actuarial Science
@@ -52,7 +52,7 @@
   Minor: Data Analytics<br>
 </li>
 <li>
-  Related Courses: Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research, Mathematical Proofs, Problem Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance <br>
+  Relevant Courses: Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research, Mathematical Proofs, Problem Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance <br>
 </li>
 </p>
 
@@ -74,47 +74,33 @@ Actuarial Exams: Exam Probability, Exam Financial Mathematics
 </p>
 
 
-<h2>RESEARCH</h2>
+<h2>RESEARCH EXPERIENCE</h2>
 
 <p>
-  <b>Research Assistant</b> | Elizabethtown College | Elizabethtown, PA    08/2020 – present<br>
+  <b>Research Assistant</b> | Elizabethtown College | Elizabethtown, PA |  08/2020 – present<br>
   Project: <b>Game Theory - Equilibrium Problem in Multiple-Strategy Game</b><br>
   <i>Supervisor: Dr. Timothy McDevitt, Professor of Mathematical and Computer Sciences at Elizabethtown College</i>
   <li>
-    Proved that Nash equilibrium makes the conservative players, who accept ties, in two strategies games more likely to win, compare to the aggressive plays who think winning is everything
+    Proved that Nash equilibrium makes the conservative players, who accept ties , in two strategyies games,s more likely to win, compared to the aggressive players who think winning is everything, and illustrated that the phenomenon is transferable and robust in three strategies non-zero-sum strategy games 
   </li>
   <li>
-    Calculated the probability that conservative players winning over aggressive players in two strategies games
+    Calculated the probability of conservative players winning over aggressive players in two strategy games
   </li>
   <li>
-    Empirically demonstrated that the probability for conservative plays to win goes down while the number of strategies gets bigger
+    Empirically demonstrated that the probability for conservative plays to win goes down as the number of strategies increases
   </li>
   <li>
-    Used Karush–Kuhn–Tucker (KKT), matrix derivatives and linear programming to analyze the mixed strategies in multiple-strategy games, and prove the probability converges to 1/2 (ongoing) 
+    Used Karush–Kuhn–Tucker (KKT), matrix derivatives and linear programming to analyze the mixed strategies in multiple-strategy games, and prove that probability converges to 1/2 (ongoing) 
   </li>
   <li>
-    Read economic literatures to find a practical application that works with the phenomenon
+    Read economic literature to find a practical application that aligns with the phenomenon
   </li>
 </p>
 
 
-
+<h2>PROFESSIONAL EXPERIENCE</h2>
 <p>
-  <b>Data Analysis Research Assistant</b> | Elizabethtown College | Elizabethtown, PA    10/2017 – 04/2018<br>
-  <i>Supervisor: Dr. Dan Chen, Assistant Professor of Political Science at the University of Richmond</i>
-  <li>
-    Assisted in a research that published in the <i>Journal of Experimental Political Science</i>
-  </li>
-  <li>
-    Cataloged hundreds of news pieces in Chinese and English, and analyzed the research data in excel format for further analysis
-  </li>
-</p>
-
-
-
-<h2>EMPLOYMENT</h2>
-<p>
-  <b>Actuarial Pricing intern |AXA</b>, P&C and specialty risk division | New York City, NY    06/2020 – 08/2020<br>
+  <b>Actuarial Pricing intern |AXA</b>, P&C and specialty risk division | New York City, NY  | 06/2020 – 08/2020<br>
   <li>
     Researched the Predictive Analytics Models and Algorithms in insurance using R markdown
   </li>
@@ -139,7 +125,7 @@ the company works </li>
 
 
 <p>
-  <b>Wealth Actuarial Intern | Mercer</b>, Philadelphia, PA.     06/2019 – 08/2019<br>
+  <b>Wealth Actuarial Intern | Mercer</b>, Philadelphia, PA | 06/2019 – 08/2019<br>
   <li>
     Implemented data gathering, data cleaning, and exploratory data to complete a mock valuation using a highly integrated software Retirement Studio, and made a 20-page valuation report for the client to review </i>
   </li>
@@ -156,7 +142,7 @@ the company works </li>
 </p>
 
 <h2>TEACHING</h2>
-<p> Teaching Assistant | Elizabethtown College | Elizabethtown, PA    04/2018 – 05/2019 </p>
+<p> Teaching Assistant | Elizabethtown College | Elizabethtown, PA  | 04/2018 – 05/2019 </p>
 <li>
   Tutored students in Financial Mathematics and Introduction to Mathematical Proofs, as chosen by the 
 faculty
