--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!-- saved from url=(0031)http://personal.psu.edu/dul262/ -->
 <html class="gr__personal_psu_edu"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Yawen Zhang</title>
-<meta name="keywords" content="Dongsheng Luo">
-<meta name="description" content="Dongsheng Luo@ Penn State">
+<meta name="keywords" content="Yawen Zhang">
+<meta name="description" content="Yawen Zhang">
 
 <link rel="stylesheet" type="text/css" media="screen" href="./index_files/style.css">
 <script type="text/javascript" async="" src="./index_files/js"></script><script type="text/javascript" async="" src="./index_files/in.php"></script><script type="text/javascript" async="" src="./index_files/js(1)"></script><script type="text/javascript" async="" src="./index_files/in(1).php"></script><script type="text/javascript" async="" src="./index_files/js(2)"></script></head>
