--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!-- saved from url=(0031)http://personal.psu.edu/dul262/ -->
 <html class="gr__personal_psu_edu"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Yawen Zhang</title>
-<meta name="keywords" content="Yawen Zhang">
-<meta name="description" content="Yawen Zhang">
+<meta name="keywords" content="Dongsheng Luo">
+<meta name="description" content="Dongsheng Luo@ Penn State">
 
 <link rel="stylesheet" type="text/css" media="screen" href="./index_files/style.css">
 <script type="text/javascript" async="" src="./index_files/js"></script><script type="text/javascript" async="" src="./index_files/in.php"></script><script type="text/javascript" async="" src="./index_files/js(1)"></script><script type="text/javascript" async="" src="./index_files/in(1).php"></script><script type="text/javascript" async="" src="./index_files/js(2)"></script></head>
@@ -19,7 +19,7 @@
       223-666-1994<br>
       1668 Baugher Ave, Elizabethtown, PA 17022.
       </p>
-      <p><a href="./Yawen Zhang_CV_Git.pdf">CV</a>,
+      <p><a href="./Yawen Zhang_CV__10-5.pdf">CV</a>,
       <a href="./personal.html">Personal</a>
       <p></p>
 			<p></p>
@@ -63,6 +63,9 @@
  <p>
   <b>Yawen Zhang</b>, A purely 3-D geometrical solution to a complicated probability problem (Submitted to Solution to  Problem 2065, Mathematics Magazine, Under Review)
 </p>
+<p>
+  <b>Yawen Zhang, Timothy McDevitt</b>, Playing to not lose instead of playing to win (preparing)
+</p>
 
 
 
@@ -81,7 +84,10 @@ Actuarial Exams: Exam Probability, Exam Financial Mathematics
   Project: <b>Game Theory - Equilibrium Problem in Multiple-Strategy Game</b><br>
   <i>Supervisor: Dr. Timothy McDevitt, Professor of Mathematical and Computer Sciences at Elizabethtown College</i>
   <li>
-    Proved that Nash equilibrium makes the conservative players, who accept ties , in two strategyies games,s more likely to win, compared to the aggressive players who think winning is everything, and illustrated that the phenomenon is transferable and robust in three strategies non-zero-sum strategy games 
+    Proved that Nash equilibrium makes the conservative players, who accept ties , in two strategyies games,s more likely to win, compared to the aggressive players who think winning is everything
+  </li>
+  <li>
+    Illustrated that the phenomenon is transferable and robust in three strategies non-zero-sum strategy games 
   </li>
   <li>
     Calculated the probability of conservative players winning over aggressive players in two strategy games
@@ -93,9 +99,14 @@ Actuarial Exams: Exam Probability, Exam Financial Mathematics
     Used Karush–Kuhn–Tucker (KKT), matrix derivatives and linear programming to analyze the mixed strategies in multiple-strategy games, and prove that probability converges to 1/2 (ongoing) 
   </li>
   <li>
-    Read economic literature to find a practical application that aligns with the phenomenon
+    Used Markov chain and programming to simplify and optimize the probability metrics in Penney' game, and generalize this application numerally and symbolically, and found it align with the phenomenon 
+  </li>
+  <li>
+    Discovered the appearance of the golden ratio in two-coin game, and offer a geometric rationale for it (on going)
   </li>
 </p>
+
+
 
 
 <h2>PROFESSIONAL EXPERIENCE</h2>
