--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Actuarial Exams: Exam Probability, Exam Financial Mathematics
 
 <h2>PROFESSIONAL EXPERIENCE</h2>
 <p>
-  <b>Actuarial Pricing intern |AXA XL</b>, | New York City, NY  | 06/2020 – 08/2020<br>
+  <b>Actuarial Pricing intern |AXA XL</b> | New York City, NY  | 06/2020 – 08/2020<br>
   <li>
     Researched the Predictive Analytics Models and Algorithms in insurance using R markdown
   </li>
@@ -136,7 +136,7 @@ the company works </li>
 
 
 <p>
-  <b>Wealth Actuarial Intern | Mercer</b>, | Philadelphia, PA | 06/2019 – 08/2019<br>
+  <b>Wealth Actuarial Intern | Mercer</b> | Philadelphia, PA | 06/2019 – 08/2019<br>
   <li>
     Implemented data gathering, data cleaning, and exploratory data to complete a mock valuation using a highly integrated software Retirement Studio, and made a 20-page valuation report for the client to review </i>
   </li>
