--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   Minor: Data Analytics<br>
 </li>
 <li>
-  Relevant Courses: Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research, Mathematical Proofs, Problem Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance <br>
+  <b>Relevant Courses:</b> Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research Mathematical Proofs <br>
+  Problem Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance <br>
 </li>
 </p>
 
@@ -190,7 +191,7 @@ faculty
 <br>
 <footer>
       <p>
-        *Last updated on 09/27/2020*
+        *Last updated on 10/05/2020*
       </p>
 </footer>
 
