--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   Minor: Data Analytics<br>
 </li>
 <li>
-  <b>Relevant Courses:</b> Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research Mathematical Proofs <br>
+  <b>Relevant Courses:</b> Mathematical Statistics, Statistical Methods in Research (SAS), Short Term Actuarial Mathematics, Theory of Probability, Database(SQL), Operations Research Mathematical Proofs, 
   Problem Solving in Financial Mathematics, Computer Science 1(Java), Financial Mathematics, multivariable Calculus, Linear Algebra, Machine Learning(R), Long Term Actuarial Mathematics & Corporate Finance <br>
 </li>
 </p>
@@ -85,19 +85,11 @@ Actuarial Exams: Exam Probability, Exam Financial Mathematics
   Project: <b>Game Theory - Equilibrium Problem in Multiple-Strategy Game</b><br>
   <i>Supervisor: Dr. Timothy McDevitt, Professor of Mathematical and Computer Sciences at Elizabethtown College</i>
   <li>
-    Proved that Nash equilibrium makes the conservative players, who accept ties , in two strategyies games,s more likely to win, compared to the aggressive players who think winning is everything
+    Proved that Nash equilibrium makes the conservative players, who accept ties , in two strategyies games,s more likely to win, compared to the aggressive players who think winning is everything, and illustrated that the phenomenon is transferable and robust in three strategies non-zero-sum strategy games
   </li>
   <li>
-    Illustrated that the phenomenon is transferable and robust in three strategies non-zero-sum strategy games 
-  </li>
-  <li>
-    Calculated the probability of conservative players winning over aggressive players in two strategy games
-  </li>
-  <li>
-    Empirically demonstrated that the probability for conservative plays to win goes down as the number of strategies increases
-  </li>
-  <li>
-    Used Karush–Kuhn–Tucker (KKT), matrix derivatives and linear programming to analyze the mixed strategies in multiple-strategy games, and prove that probability converges to 1/2 (ongoing) 
+    Calculated the probability of conservative players winning over aggressive players in two strategy games, and used matrix derivatives and linear programming to analyze multiple-strategy games and empirically demonstrated that
+the probability goes down as the number of strategies increases
   </li>
   <li>
     Used Markov chain and programming to simplify and optimize the probability metrics in Penney' game, and generalize this application numerally and symbolically, and found it align with the phenomenon 
