--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   B.S. in Actuarial Science
 </li>
 <li>
-  GPA: 3.62/4.0 （grade ranking #2）<br>
+  Major GPA: 3.62/4.0 （grade ranking #2）<br>
 </li>
 <li>
   Minor: Data Analytics<br>
@@ -83,7 +83,7 @@ Actuarial Exams: Exam Probability, Exam Financial Mathematics
 <p>
   <b>Research Assistant</b> | Elizabethtown College | Elizabethtown, PA |  08/2020 – present<br>
   Project: <b>Game Theory - Equilibrium Problem in Multiple-Strategy Game</b><br>
-  <i>Supervisor: Dr. Timothy McDevitt, Professor of Mathematical and Computer Sciences at Elizabethtown College</i>
+  <i>Supervisor: Dr. Timothy McDevitt, Professor of Mathematical Sciences at Elizabethtown College</i>
   <li>
     Proved that Nash equilibrium makes the conservative players, who accept ties , in two strategyies games,s more likely to win, compared to the aggressive players who think winning is everything, and illustrated that the phenomenon is transferable and robust in three strategies non-zero-sum strategy games
   </li>
@@ -92,10 +92,8 @@ Actuarial Exams: Exam Probability, Exam Financial Mathematics
 the probability goes down as the number of strategies increases
   </li>
   <li>
-    Used Markov chain and programming to simplify and optimize the probability metrics in Penney' game, and generalize this application numerally and symbolically, and found it align with the phenomenon 
+    Used Markov chain and programming to simplify the probability metrics in Penney' game, and generalize this application numerally and symbolically, and found it align with the phenomenon 
   </li>
-  <li>
-    Discovered the appearance of the golden ratio in two-coin game, and offer a geometric rationale for it (on going)
   </li>
 </p>
 
