--- a/index.html
+++ b/index.html
@@ -92,12 +92,10 @@ Actuarial Exams: Exam Probability, Exam Financial Mathematics
 the probability goes down as the number of strategies increases
   </li>
   <li>
-    Used Markov chain and programming to simplify the probability metrics in Penney' game, and generalize this application numerally and symbolically, and found it align with the phenomenon 
+    Used Mathematica to write an algorithm, based on Markov chain, to simplify the probability metrices in Penney' game, and generalized this application numerally and symbolically, and found it align with the phenomenon
   </li>
   </li>
 </p>
-
-
 
 
 <h2>PROFESSIONAL EXPERIENCE</h2>
